@@ -1,3 +1,6 @@
+2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/GrampsDb/_GrampsInMemDB.py: xml load/save not working, fixed #1319
+
 2007-10-22  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/ReportBase/_MenuOptions.py: Refactored options, GEPS #005
 
